Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQLParser.java
// $ANTLR 3.0.1 /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3 2009-04-27 10:39:00

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLMySQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "DQVALUE", "OQUOTE", "QVALUE", "NUMBER", "DOUBLEQUOTE", "DECNUMBER", "HEXNUMBER", "DOT", "SLASH", "QUOTE", "IDNUMBER", "WS", "ML_COMMENT", "OL_COMMENT", "'SET'", "','", "';'", "'='", "'GLOBAL'", "'SESSION'", "'@'", "'USE'", "'CREATE'", "'DATABASE'", "'SCHEMA'", "'IF'", "'NOT'", "'EXISTS'", "'DEFAULT'", "'CHARACTER'", "'COLLATE'", "'TEMPORARY'", "'TABLE'", "'('", "')'", "'UNIQUE'", "'PRIMARY'", "'FULLTEXT'", "'INDEX'", "'KEY'", "'NULL'", "'ON'", "'UPDATE'", "'DELETE'", "'AUTO_INCREMENT'", "'COMMENT'", "'COLUMN_FORMAT'", "'FIXED'", "'DYNAMIC'", "'STORAGE'", "'DISK'", "'ASC'", "'DESC'", "'USING'", "'BTREE'", "'HASH'", "'RTREE'", "'KEY_BLOCK_SIZE'", "'WITH'", "'PARSER'", "'BIT'", "'TINYINT'", "'UNSIGNED'", "'ZEROFILL'", "'SMALLINT'", "'MEDIUMINT'", "'INT'", "'INTEGER'", "'BIGINT'", "'REAL'", "'DOUBLE'", "'FLOAT'", "'DECIMAL'", "'NUMERIC'", "'DATE'", "'TIME'", "'TIMESTAMP'", "'DATETIME'", "'YEAR'", "'CHAR'", "'VARCHAR'", "'BINARYTYPE'", "'VARBINARY'", "'TINYBLOB'", "'BLOB'", "'MEDIUMBLOB'", "'LONGBLOB'", "'TINYTEXT'", "'BYNARY'", "'TEXTVAR'", "'MEDIUMTEXT'", "'LONGTEXT'", "'ENUM'", "'ENGINE'", "'AVG_ROW_LENGTH'", "'CHARSET'", "'CHECKSUM'", "'CONNECTION'", "'DELAY_KEY_WRITE'", "'INDEX DIRECTORY'", "'INSERT_METHOD'", "'NO'", "'FIRST'", "'LAST'", "'MAX_ROWS'", "'MIN_ROWS'", "'PACK_KEYS'", "'ROW_FORMAT'", "'COMPRESSED'", "'REDUNDANT'", "'COMPACT'", "'TABLESPACE'", "'UNION'", "'REFERENCES'", "'MATCH'", "'FULL'", "'PARTIAL'", "'SIMPLE'", "'RESTRICT'", "'CASCADE'", "'ACTION'", "'DROP'", "'INSERT'", "'LOW_PRIORITY'", "'DELAYED'", "'HIGH_PRIORITY'", "'IGNORE'", "'INTO'", "'VALUES'"
    };
    public static final int ML_COMMENT=17;
    public static final int QUOTE=14;
    public static final int WS=16;
    public static final int SLASH=13;
    public static final int OQUOTE=6;
    public static final int NUMBER=8;
    public static final int QVALUE=7;
    public static final int DECNUMBER=10;
    public static final int OL_COMMENT=18;
    public static final int DQVALUE=5;
    public static final int IDNUMBER=15;
    public static final int DOT=12;
    public static final int ID=4;
    public static final int DOUBLEQUOTE=9;
    public static final int EOF=-1;
    public static final int HEXNUMBER=11;

        public DDLMySQLParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[251+1];
         }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLMySQLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition
    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:18:1: data_definition returns [Node returnNode] : (data_definition_statementsGen+= data_definition_statements | data_manipulation_statementsGen+= data_manipulation_statements | administration_statementsGen+= administration_statements | utility_statementsGen+= utility_statements )* ;
    public final data_definition_return data_definition() throws RecognitionException {
        data_definition_return retval = new data_definition_return();
        retval.start = input.LT(1);

        List list_data_definition_statementsGen=null;
        List list_data_manipulation_statementsGen=null;
        List list_administration_statementsGen=null;
        List list_utility_statementsGen=null;
        RuleReturnScope data_definition_statementsGen = null;
        RuleReturnScope data_manipulation_statementsGen = null;
        RuleReturnScope administration_statementsGen = null;
        RuleReturnScope utility_statementsGen = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:1: ( (data_definition_statementsGen+= data_definition_statements | data_manipulation_statementsGen+= data_manipulation_statements | administration_statementsGen+= administration_statements | utility_statementsGen+= utility_statements )* )
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:4: (data_definition_statementsGen+= data_definition_statements | data_manipulation_statementsGen+= data_manipulation_statements | administration_statementsGen+= administration_statements | utility_statementsGen+= utility_statements )*
            {
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:4: (data_definition_statementsGen+= data_definition_statements | data_manipulation_statementsGen+= data_manipulation_statements | administration_statementsGen+= administration_statements | utility_statementsGen+= utility_statements )*
            loop1:
            do {
                int alt1=5;
                switch ( input.LA(1) ) {
                case 27:
                case 126:
                    {
                    alt1=1;
                    }
                    break;
                case 127:
                    {
                    alt1=2;
                    }
                    break;
                case 19:
                    {
                    alt1=3;
                    }
                    break;
                case 26:
                    {
                    alt1=4;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:5: data_definition_statementsGen+= data_definition_statements
            	    {
            	    pushFollow(FOLLOW_data_definition_statements_in_data_definition48);
            	    data_definition_statementsGen=data_definition_statements();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_data_definition_statementsGen==null) list_data_definition_statementsGen=new ArrayList();
            	    list_data_definition_statementsGen.add(data_definition_statementsGen);


            	    }
            	    break;
            	case 2 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:65: data_manipulation_statementsGen+= data_manipulation_statements
            	    {
            	    pushFollow(FOLLOW_data_manipulation_statements_in_data_definition54);
            	    data_manipulation_statementsGen=data_manipulation_statements();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_data_manipulation_statementsGen==null) list_data_manipulation_statementsGen=new ArrayList();
            	    list_data_manipulation_statementsGen.add(data_manipulation_statementsGen);


            	    }
            	    break;
            	case 3 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:129: administration_statementsGen+= administration_statements
            	    {
            	    pushFollow(FOLLOW_administration_statements_in_data_definition60);
            	    administration_statementsGen=administration_statements();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_administration_statementsGen==null) list_administration_statementsGen=new ArrayList();
            	    list_administration_statementsGen.add(administration_statementsGen);


            	    }
            	    break;
            	case 4 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:19:187: utility_statementsGen+= utility_statements
            	    {
            	    pushFollow(FOLLOW_utility_statements_in_data_definition66);
            	    utility_statementsGen=utility_statements();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_utility_statementsGen==null) list_utility_statementsGen=new ArrayList();
            	    list_utility_statementsGen.add(utility_statementsGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( backtracking==0 ) {
              
              		// Create return CST Node
              		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		data_definitionReturnNode.setKind("data_definition");
              	
              		// Create a special CST Node for terminal data_definition_statementsGen aggregation
              		if(list_data_definition_statementsGen != null) {
              	    for(int pos = 0; pos < list_data_definition_statementsGen.size(); pos++ )  { 
              		// No Terminal extractor
              	    if(list_data_definition_statementsGen != null) {		
              	    	DDLMySQLParser.data_definition_statements_return r = (DDLMySQLParser.data_definition_statements_return) list_data_definition_statementsGen.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("data_definition_statements");
              	    		data_definitionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}
              	
              	
              		// Create a special CST Node for terminal data_manipulation_statementsGen aggregation
              		if(list_data_manipulation_statementsGen != null) {
              	    for(int pos = 0; pos < list_data_manipulation_statementsGen.size(); pos++ )  { 
              		// No Terminal extractor
              	    if(list_data_manipulation_statementsGen != null) {		
              	    	DDLMySQLParser.data_manipulation_statements_return r = (DDLMySQLParser.data_manipulation_statements_return) list_data_manipulation_statementsGen.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("data_manipulation_statements");
              	    		data_definitionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}
              	
              	
              		// Create a special CST Node for terminal administration_statementsGen aggregation
              		if(list_administration_statementsGen != null) {
              	    for(int pos = 0; pos < list_administration_statementsGen.size(); pos++ )  { 
              		// No Terminal extractor
              	    if(list_administration_statementsGen != null) {		
              	    	DDLMySQLParser.administration_statements_return r = (DDLMySQLParser.administration_statements_return) list_administration_statementsGen.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("administration_statements");
              	    		data_definitionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}
              	
              	
              		// Create a special CST Node for terminal utility_statementsGen aggregation
              		if(list_utility_statementsGen != null) {
              	    for(int pos = 0; pos < list_utility_statementsGen.size(); pos++ )  { 
              		// No Terminal extractor
              	    if(list_utility_statementsGen != null) {		
              	    	DDLMySQLParser.utility_statements_return r = (DDLMySQLParser.utility_statements_return) list_utility_statementsGen.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("utility_statements");
              	    		data_definitionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}
              	
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = data_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition

    public static class administration_statements_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start administration_statements
    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:89:1: administration_statements returns [Node returnNode] : set_definitionGen+= set_definition ;
    public final administration_statements_return administration_statements() throws RecognitionException {
        administration_statements_return retval = new administration_statements_return();
        retval.start = input.LT(1);

        List list_set_definitionGen=null;
        RuleReturnScope set_definitionGen = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:90:1: (set_definitionGen+= set_definition )
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:90:3: set_definitionGen+= set_definition
            {
            pushFollow(FOLLOW_set_definition_in_administration_statements89);
            set_definitionGen=set_definition();
            _fsp--;
            if (failed) return retval;
            if (list_set_definitionGen==null) list_set_definitionGen=new ArrayList();
            list_set_definitionGen.add(set_definitionGen);

            if ( backtracking==0 ) {
              
              		// Create return CST Node
              		Node administration_statementsReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		administration_statementsReturnNode.setKind("administration_statements");
              	    // Create a CST Node
              		if(list_set_definitionGen != null) {
              	        for(Iterator it = list_set_definitionGen.iterator(); it.hasNext(); )  { 
              	            DDLMySQLParser.set_definition_return r = (DDLMySQLParser.set_definition_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("set_definition");
              	            	administration_statementsReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = administration_statementsReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end administration_statements

    public static class set_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start set_definition
    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:110:1: set_definition returns [Node returnNode] : TK_0= 'SET' variable_assignmentGen+= variable_assignment (TK_1= ',' variable_assignmentGen_1+= variable_assignment )* TK_2= ';' ;
    public final set_definition_return set_definition() throws RecognitionException {
        set_definition_return retval = new set_definition_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        Token TK_2=null;
        List list_variable_assignmentGen=null;
        List list_variable_assignmentGen_1=null;
        RuleReturnScope variable_assignmentGen = null;
        RuleReturnScope variable_assignmentGen_1 = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:111:1: (TK_0= 'SET' variable_assignmentGen+= variable_assignment (TK_1= ',' variable_assignmentGen_1+= variable_assignment )* TK_2= ';' )
            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:111:3: TK_0= 'SET' variable_assignmentGen+= variable_assignment (TK_1= ',' variable_assignmentGen_1+= variable_assignment )* TK_2= ';'
            {
            TK_0=(Token)input.LT(1);
            match(input,19,FOLLOW_19_in_set_definition110); if (failed) return retval;
            pushFollow(FOLLOW_variable_assignment_in_set_definition114);
            variable_assignmentGen=variable_assignment();
            _fsp--;
            if (failed) return retval;
            if (list_variable_assignmentGen==null) list_variable_assignmentGen=new ArrayList();
            list_variable_assignmentGen.add(variable_assignmentGen);

            // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:111:58: (TK_1= ',' variable_assignmentGen_1+= variable_assignment )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==20) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:111:59: TK_1= ',' variable_assignmentGen_1+= variable_assignment
            	    {
            	    TK_1=(Token)input.LT(1);
            	    match(input,20,FOLLOW_20_in_set_definition119); if (failed) return retval;
            	    pushFollow(FOLLOW_variable_assignment_in_set_definition123);
            	    variable_assignmentGen_1=variable_assignment();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_variable_assignmentGen_1==null) list_variable_assignmentGen_1=new ArrayList();
            	    list_variable_assignmentGen_1.add(variable_assignmentGen_1);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            TK_2=(Token)input.LT(1);
            match(input,21,FOLLOW_21_in_set_definition129); if (failed) return retval;
            if ( backtracking==0 ) {
              
              		// Create return CST Node
              		Node set_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		set_definitionReturnNode.setKind("set_definition");
              	    // Create a Token CST Leaf	
              	    if(TK_0 != null) {
              			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_0Leaf.setKind("TOKEN");
              	 		TK_0Leaf.setValue(TK_0.getText());
              			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
              			TK_0Leaf.setLine(TK_0.getLine());
              	 		set_definitionReturnNode.getChildren().add(TK_0Leaf);
              	 	}
              	    // Create a CST Node
              		if(list_variable_assignmentGen != null) {
              	        for(Iterator it = list_variable_assignmentGen.iterator(); it.hasNext(); )  { 
              	            DDLMySQLParser.variable_assignment_return r = (DDLMySQLParser.variable_assignment_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("variable_assignment");
              	            	set_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	
              		// Create a special CST Node for terminal variable_assignmentGen_1 aggregation
              		if(list_variable_assignmentGen_1 != null) {
              	    for(int pos = 0; pos < list_variable_assignmentGen_1.size(); pos++ )  { 
              	    // Create a Token CST Leaf	
              	    if(TK_1 != null) {
              			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_1Leaf.setKind("TOKEN");
              	 		TK_1Leaf.setValue(TK_1.getText());
              			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
              			TK_1Leaf.setLine(TK_1.getLine());
              	 		set_definitionReturnNode.getChildren().add(TK_1Leaf);
              	 	}
              		// No Terminal extractor
              	    if(list_variable_assignmentGen_1 != null) {		
              	    	DDLMySQLParser.variable_assignment_return r = (DDLMySQLParser.variable_assignment_return) list_variable_assignmentGen_1.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("variable_assignment");
              	    		set_definitionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}
              	
              	    // Create a Token CST Leaf	
              	    if(TK_2 != null) {
              			Leaf TK_2Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_2Leaf.setKind("TOKEN");
              	 		TK_2Leaf.setValue(TK_2.getText());
              			TK_2Leaf.setPos(TK_2.getCharPositionInLine());
              			TK_2Leaf.setLine(TK_2.getLine());
              	 		set_definitionReturnNode.getChildren().add(TK_2Leaf);
              	 	}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = set_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end set_definition

    public static class variable_assignment_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start variable_assignment
    // /home/jlcanovas/workspace/Grammar2Model.examples.wikiDB2Model/files/gen/DDLMySQL.ge3:173:1: variable_assignment returns [Node returnNode] : (IDGen= ID TK_0= '=' DQVALUEGen= DQVALUE | (TK_0= 'GLOBAL' | TK_1= 'SESSION' ) IDGen= ID TK_2= '=' DQVALUEGen= DQVALUE | TK_0= '@' TK_1= '@' IDGen= ID TK_2= '=' (DQVALUEGen= DQVALUE | TK_3= '@' TK_4= '@' IDGen_1= ID ) );
    public final variable_assignment_return variable_assignment() throws RecognitionException {
        variable_assignment_return retval = new variable_assignment_return();
        retval.start = input.LT(1);

        Token IDGen=null;
        Token TK_0=null;
        Token DQVALUEGen=null;
        Token TK_1=null;
        Token TK_2=null;
        Token TK_3=null;
        Token TK_4=null;
        Token IDGen_1=null;
